--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  padding-bottom: 250px;
+  background: url('/darkblockster-bg.jpg') #000000;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -31,10 +31,8 @@ select {
 }
 
 body {
-  background: var(--background-color);
   font-family: "Inter", sans-serif;
   color: var(--white);
-  display: flex;
   margin: 0;
   text-align: center;
 }
